conformance_test/core_language_tests/positive_tests/08_modules/0802_module_definitions_part/080203_importing_from_modules/08020305_importing_all_definitions_of_a_module/NegSem_08020305_ImportingAllDefinitionsOfAModule_002.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:8.2.3.5, Ensure that the constant is not visible after import with except.
 ** @verdict  pass reject
 *****************************************************************/

// The following requirements are tested:
// Restriction b
// In the set of except statements for an all import, only one except statement per 
// kind of definition (i.e. for a group, type, etc.) is allowed.

module NegSem_08020305_ImportingAllDefinitionsOfAModule_002 {

	import from NegSem_08020305_ImportingAllDefinitionsOfAModule_002_import all except { 
	// everything is excluded again
		group all;
		type all;
		template all;
		const c_test1;
		testcase all;
		altstep all;
		function all;
		signature all;
		modulepar all; 
		const c_test2; // error: const present more than once in the except part
	};

	type component GeneralComp {}

	testcase TC_NegSem_08020305_ImportingAllDefinitionsOfAModule_002() runs on GeneralComp {
		if (c_myconst == 43532) { 
			setverdict(fail);
		} else {
			setverdict(pass);
		}
	}

	control{
		execute(TC_NegSem_08020305_ImportingAllDefinitionsOfAModule_002());
	}
}

